--- a/phiscord/renderer/styles/globals.css
+++ b/phiscord/renderer/styles/globals.css
@@ -12,12 +12,32 @@
 @layer utilities {
     /* Chrome, Safari and Opera */
     .no-scrollbar::-webkit-scrollbar {
-      display: none;
+        display: none;
     }
 
     .no-scrollbar {
-      -ms-overflow-style: none; /* IE and Edge */
-      scrollbar-width: none; /* Firefox */
+        -ms-overflow-style: none; /* IE and Edge */
+        scrollbar-width: none; /* Firefox */
+    }
+
+    html,
+    body,
+    #__next,
+    #app {
+        @apply h-screen w-screen bg-slate-950
+    }
+
+    .fade-in {
+        animation: fadeIn 0.5s ease-in;
+    }
+
+    @keyframes fadeIn {
+        from {
+            opacity: 0;
+        }
+        to {
+            opacity: 1;
+        }
     }
 }
 
@@ -93,8 +113,10 @@
     * {
         @apply border-border;
     }
+
     body {
         @apply bg-background text-foreground;
+        background-color: black;
         font-feature-settings: "rlig" 1, "calt" 1;
     }
 }
