--- a/phiscord/renderer/styles/globals.css
+++ b/phiscord/renderer/styles/globals.css
@@ -31,6 +31,10 @@
         animation: fadeIn 0.5s ease-in;
     }
 
+    .fade-in-faster {
+        animation: fadeIn 0.25s ease-in;
+    }
+
     @keyframes fadeIn {
         from {
             opacity: 0;
