--- a/phiscord/renderer/styles/globals.css
+++ b/phiscord/renderer/styles/globals.css
@@ -57,6 +57,14 @@
             opacity: 1;
         }
     }
+
+    .mention {
+        background-color: rgb(115, 115, 255);
+        padding: 2px 6px;
+        color: #ffffff;
+        border-radius: 12px;
+        font-weight: bold;
+    }
 }
 
 @layer base {
